<resources>
    <string name="app_name">Wonderful Jateng</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="_">-</string>
    <string name="wisata">Wisata</string>
    <string name="umkm">UMKM</string>
    <string name="profile">Profil Saya</string>
    <string name="penginapan">Penginapan</string>
    <string name="budaya">Budaya</string>
    <string name="kuliner">Kuliner</string>
    <string name="url1">https://ik.imagekit.io/tvlk/blog/2020/01/shutterstock_784389145.jpg</string>
    <string name="read_more">Read More</string>
    <string name="welcome_to_wonderful_jateng">Welcome to Wonderful Jateng.</string>
    <string name="daftar">Daftar</string>
    <string name="alamat">Alamat</string>
    <string name="sudah_punya_akun_login_disini">Sudah Punya Akun? Login Disini</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="silahkan_daftarkan_identitas_anda">Silahkan Daftarkan Identitas Anda</string>
    <string name="register_form">Register Form</string>
    <string name="selamat_datang_di_wonderful_jateng">Selamat Datang di Wonderful Jateng</string>
    <string name="belum_punya_akun_daftar_disini">Belum Punya Akun? Daftar Disini</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama">Nama</string>
    <string name="pilih_salah_satu_layanan_penginapan">Pilih salah satu layanan penginapan :</string>
    <string name="https_www_traveloka_com_ms_my_hotel">https://www.traveloka.com/ms-my/hotel</string>
    <string name="https_www_pegipegi_com">https://www.pegipegi.com/</string>
    <string name="loading">Loading...</string>
</resources>
