<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="150dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:src="@drawable/icon_app"-->
<!--        android:contentDescription="@string/_" />-->
        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:iss_auto_cycle="true"
            app:iss_period="1000"
            app:iss_delay="0"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_birumuda"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_wisata"
                android:layout_height="150dp"
                android:layout_width="match_parent"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:background="@null"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/btn_wisata"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/_" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wisata"
                android:layout_marginTop="-10dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"/>
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text=""-->
<!--                android:textSize="25sp"-->
<!--                android:gravity="center_horizontal"/>-->
            <ImageButton
                android:id="@+id/btn_umkm"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/btn_umkm"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:contentDescription="@string/_" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/umkm"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="-10dp"
                android:gravity="center_horizontal"/>
<!--            <ImageButton-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="0.5"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:padding="10dp"-->
<!--                android:background="@null"-->
<!--                android:scaleType="fitCenter"-->
<!--                android:contentDescription="@string/_" />-->
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_kuliner"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:background="@null"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/btn_kuliner"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/_" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kuliner"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="-10dp"
                android:gravity="center_horizontal"/>
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text=""-->
<!--                android:textSize="25sp"-->
<!--                android:gravity="center_horizontal"/>-->

            <ImageButton
                android:id="@+id/btn_budaya"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/_"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/btn_budaya"
                tools:ignore="NestedWeights" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/budaya"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="-10dp"
                android:gravity="center_horizontal"/>
<!--            <ImageButton-->
<!--                android:id="@+id/btn_glosarium"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="0.5"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:padding="10dp"-->
<!--                android:background="@null"-->
<!--                android:scaleType="fitCenter"-->
<!--                android:contentDescription="@string/_" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_penginapan"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="0dp"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:background="@null"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/btn_hotel"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/_" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/penginapan"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="-10dp"
                android:gravity="center_horizontal"/>
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text=""-->
<!--                android:textSize="25sp"-->
<!--                android:gravity="center_horizontal"/>-->
            <ImageButton
                android:id="@+id/btn_profile"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/btn_profile"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:background="@null"
                android:scaleType="fitCenter"
                android:contentDescription="@string/_" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="-10dp"
                android:gravity="center_horizontal"/>
<!--            <ImageButton-->
<!--                android:id="@+id/btn_profil"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="0.5"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:padding="10dp"-->
<!--                android:background="@null"-->
<!--                android:scaleType="fitCenter"-->
<!--                android:contentDescription="@string/_" />-->
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/birumuda"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_marginTop="-10dp"
            android:gravity="center_horizontal"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:contentDescription="@string/_" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>